fix border alignment in home

--- a/src/components/Welcome/index.css
+++ b/src/components/Welcome/index.css
@@ -1,6 +1,5 @@
 .Welcome {
   flex: 1;
-  justify-content: center;
   align-items: center;
 }
 
